assert-struct/tests/snapshots/enum_struct_patterns__nested_option_enum_struct_failure.snap
---
source: assert-struct/tests/enum_struct_patterns.rs
expression: message
---
error: assert_struct! failed
  --> assert-struct/tests/enum_struct_patterns_errors/nested_option_enum_struct_failure.rs:31:20
   |
31 |             limit: > 100,  // This will fail: 10 is not > 100
   |                    ^^^^^ got 10
